# bookshelf

./: .env.default  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
bookshelf/: settings.py  urls.py  wsgi.py
core/: admin.py
core/migrations/: 0001_initial.py  0002_auto_20211027_1651.py
core/models/: __init__.py  author.py  book.py
core/serializers/: author.py
core/tests/factories/: author.py  book.py  user.py
core/tests/models/: test_author.py  test_book.py
core/tests/serializers/: test_author_serializer.py
core/tests/views/: test_author_view.py
core/views/: author.py
